# SangRepository

./: .gitignore  CMakeLists.txt  README.md  launch.vs.json
config/appsettings/: appsettings.json
config/environments/: environment.dev  environment.prod
config/logging/: logging.config
core/: CMakeLists.txt
core/include/: TelemetryProcessor.h  calculator.h
core/src/: TelemetryProcessor.cpp  calculator.cpp
docs/architecture/: ARCHITECTURE.md
modules/: CMakeLists.txt
modules/analytics/: CMakeLists.txt
modules/exporter/: CMakeLists.txt
modules/ingestion/: CMakeLists.txt
modules/transformation/: CMakeLists.txt
src/: main.cpp
tests/: CMakeLists.txt
